src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AB2__Adbook</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CPQ Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancellation</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Entered in Error</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Current Month Forecast</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Meeting%2FPresentation</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Opt Out</fullName>
        </values>
        <values>
            <fullName>Pending Cancellation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Renegotiation</fullName>
        </values>
        <values>
            <fullName>Renegotiation -- Cancellation</fullName>
        </values>
        <values>
            <fullName>Renewal</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HWMR Marketing Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1 - Warm</fullName>
        </values>
        <values>
            <fullName>2 - Hot</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HWMR Sales Process</fullName>
        <description>The HWMR Sales Process was defined in an all-day workshop at the RevCult offices on 9/6/2019</description>
        <isActive>true</isActive>
        <values>
            <fullName>1 - Learn</fullName>
        </values>
        <values>
            <fullName>2 - Align</fullName>
        </values>
        <values>
            <fullName>3 - Solve</fullName>
        </values>
        <values>
            <fullName>4 - Finalize</fullName>
        </values>
        <values>
            <fullName>5 - Sign</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Market Intelligence Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Budget Qualification</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Entered in Error</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Negotiation</fullName>
        </values>
        <values>
            <fullName>Delete</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Final Signature</fullName>
        </values>
        <values>
            <fullName>In Purchasing</fullName>
        </values>
        <values>
            <fullName>Lost%2FExpired</fullName>
        </values>
        <values>
            <fullName>New Opportunity</fullName>
        </values>
        <values>
            <fullName>Price Increase</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospect Engaged</fullName>
        </values>
        <values>
            <fullName>Technically Selected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Marketing</fullName>
        <description>Marketing</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Entered in Error</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Proposal Stage</fullName>
        </values>
        <values>
            <fullName>Proposal w%2FFeedback</fullName>
        </values>
        <values>
            <fullName>Verbal Approval from Client</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Media</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Entered in Error</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>IO Received</fullName>
        </values>
        <values>
            <fullName>Proposal Stage</fullName>
        </values>
        <values>
            <fullName>Proposal w%2FFeedback</fullName>
        </values>
        <values>
            <fullName>Verbal Approval from Client</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Metrostudy - Admin Sales Process</fullName>
        <description>for all stages to be available to MS Admins</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Budget Qualification</fullName>
        </values>
        <values>
            <fullName>Cancellation Reversal</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Entered in Error</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Negotiation</fullName>
        </values>
        <values>
            <fullName>Credit Memo</fullName>
        </values>
        <values>
            <fullName>Delete</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Final Signature</fullName>
        </values>
        <values>
            <fullName>In Purchasing</fullName>
        </values>
        <values>
            <fullName>Lost%2FExpired</fullName>
        </values>
        <values>
            <fullName>New Opportunity</fullName>
        </values>
        <values>
            <fullName>Pending Cancellation</fullName>
        </values>
        <values>
            <fullName>Price Increase</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospect Engaged</fullName>
        </values>
        <values>
            <fullName>Rev Reversal</fullName>
        </values>
        <values>
            <fullName>Technically Selected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Metrostudy Opportunity - REE</fullName>
        <description>Metrostudy Opportunity - REE Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Budget Qualification</fullName>
        </values>
        <values>
            <fullName>Closed %E2%80%93 Entered in Error</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Negotiation</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Final Signature</fullName>
        </values>
        <values>
            <fullName>In Purchasing</fullName>
        </values>
        <values>
            <fullName>Lost%2FExpired</fullName>
        </values>
        <values>
            <fullName>New Opportunity</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospect Engaged</fullName>
        </values>
        <values>
            <fullName>Technically Selected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Metrostudy Opportunity Record Type Consult</fullName>
        <description>Metrostudy Opportunity Record Type Consult</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %E2%80%93 Entered in Error</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Delete</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Final Signature</fullName>
        </values>
        <values>
            <fullName>Lost%2FExpired</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospect Engaged</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Metrostudy Renewal Process</fullName>
        <description>Used to track renewals/cancellations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Delete</fullName>
        </values>
        <values>
            <fullName>Pending Cancellation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Soapbox Events Registrations</fullName>
        <description>This is the sales process for Soapbox Events registrations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %E2%80%93 Entered in Error</fullName>
        </values>
        <values>
            <fullName>Delete</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AB2__ABAgencyCommission__c</fullName>
        <description>AdBook Agency Commission that is applied to Drop Prices when AB Bill To = &apos;Agency&apos;</description>
        <inlineHelpText>AdBook Agency Commission that is applied to Drop Prices when AB Bill To = &apos;Agency&apos;</inlineHelpText>
        <label>AB Agency Commission</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AB2__ABAgencyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Agency Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AB2__AB_Agency__c</valueField>
            </filterItems>
            <infoMessage>The Contact selected for the AB Agency Contact requires the same Account as the AB Agency.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (AB Agency Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABBillTo__c</fullName>
        <label>AB Bill To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                    <default>true</default>
                    <label>Client</label>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABBillType__c</fullName>
        <description>Maps to the AdBook Order BillTypeName field.</description>
        <label>AB Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net</fullName>
                    <default>true</default>
                    <label>Net</label>
                </value>
                <value>
                    <fullName>Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABBillingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (AB Billing Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABBillingModel__c</fullName>
        <label>AB Billing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotSpecified</fullName>
                </value>
                <value>
                    <fullName>UpFront</fullName>
                </value>
                <value>
                    <fullName>ProRata</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>DeliveryUncapped</fullName>
                </value>
                <value>
                    <fullName>DeliveryAccrual</fullName>
                </value>
                <value>
                    <fullName>DeliveryProRataLifeTimeCap</fullName>
                    <default>true</default>
                    <label>DeliveryProRataLifeTimeCap</label>
                </value>
                <value>
                    <fullName>DeliveryPeriodicCap</fullName>
                </value>
                <value>
                    <fullName>DeliveryLifetimeCap</fullName>
                </value>
                <value>
                    <fullName>ProRataEvenMonths</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABCampaignStatus__c</fullName>
        <description>Legacy Field</description>
        <inlineHelpText>Legacy Field</inlineHelpText>
        <label>AB Campaign Status (Legacy)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABClientContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Client Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>The Contact selected for the AB Client Contact requires the same Account as the Opportunity.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABDiscount__c</fullName>
        <description>Discount to apply at the Opportunity Line Item level to AdBook Drops.</description>
        <inlineHelpText>Discount for AdBook Drops</inlineHelpText>
        <label>AB Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropIds__c</fullName>
        <description>Accumulates the Drop Ids associated with this campaign so that they are searchable.</description>
        <inlineHelpText>Accumulates the Drop Ids associated with this campaign so that they are searchable.</inlineHelpText>
        <label>AB Drop Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__ABMaterialsContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Materials Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (AB Materials Contact)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABOrderConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional Order/IO Configuration for AdBook Order</description>
        <inlineHelpText>Optional Order/IO Configuration for AdBook Order</inlineHelpText>
        <label>AB Order Configuration</label>
        <referenceTo>AB2__AdBookOrderConfiguration__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABOrderID__c</fullName>
        <externalId>true</externalId>
        <label>AB Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABOrderStatus__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The AdBook Campaign Status. Used in preference to the Opportunity Stage mapping</description>
        <inlineHelpText>The AdBook Campaign Status</inlineHelpText>
        <label>AB Campaign Status</label>
        <referenceTo>AB2__ABOrderStatus__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABOutOfSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Out of Sync with AdBook. This is set from AdBook to initiate a refresh of the Order into Salesforce.</description>
        <inlineHelpText>Out of Sync with AdBook. This record should be refreshed from AdBook.</inlineHelpText>
        <label>AB Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABRateCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AdBook Rate Card to override the selected Pricebook</description>
        <inlineHelpText>AdBook Rate Card to override the selected Pricebook</inlineHelpText>
        <label>AB Rate Card</label>
        <referenceTo>AB2__AdBookRateCard__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABSalesTeam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AdBook Sales Team</description>
        <inlineHelpText>The AdBook Sales Team. Expanded to a collection of Reps when synchronized to AdBook and then cleared.</inlineHelpText>
        <label>AB Sales Team</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AB2__AdBookDynamicPropertyListValues__c.AB2__AdBookDynamicPropertyName__c</field>
                <operation>equals</operation>
                <value>Sales_Team</value>
            </filterItems>
            <filterItems>
                <field>AB2__AdBookDynamicPropertyListValues__c.AB2__AdBookDynamicPropertyObjectType__c</field>
                <operation>equals</operation>
                <value>Order</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AB2__AdBookDynamicPropertyListValues__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABTotalGrossCost__c</fullName>
        <description>The AdBook Total Gross Cost</description>
        <inlineHelpText>The AdBook Total Gross Cost</inlineHelpText>
        <label>AB Total Gross Cost</label>
        <summarizedField>OpportunityLineItem.AB2__ABGrossCost__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.AB2__ABPriceType__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AB2__ABViewAdBookIO__c</fullName>
        <description>Link to the PDF of the AdBook order</description>
        <inlineHelpText>Link to the PDF of the AdBook order</inlineHelpText>
        <label>AB View IO</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AB2__AB_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AB2__ABAccountType__c</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__AB_Billing_Comments__c</fullName>
        <description>AdBook Billing Comments</description>
        <inlineHelpText>AdBook Billing Comments</inlineHelpText>
        <label>AB Billing Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__AB_Campaign_Notes__c</fullName>
        <description>AdBook Campaign Notes</description>
        <inlineHelpText>AdBook Campaign Notes</inlineHelpText>
        <label>AB Campaign Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__AB_IO_Number__c</fullName>
        <description>AdBook IO #</description>
        <label>AB IO#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__AB_Internal_Campaign_Notes__c</fullName>
        <description>AdBook Internal Campaign Notes</description>
        <inlineHelpText>AdBook Internal Campaign Notes</inlineHelpText>
        <label>AB Internal Campaign Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__AB_PO_Number__c</fullName>
        <description>AdBook Purchase Order #</description>
        <inlineHelpText>AdBook Purchase Order #</inlineHelpText>
        <label>AB PO#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Error_Message__c</fullName>
        <description>Contains any error that occur during AdBook operations.</description>
        <label>AB Error Message</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AB2__Operations_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Operations Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AB2__Rep__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Operations Contact</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AB2__Rep__c</referenceTo>
        <relationshipLabel>Opportunities (Operations Rep)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__OrderNumber__c</fullName>
        <label>AB Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AB Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Sales_Rep1_Quota__c</fullName>
        <defaultValue>100.0</defaultValue>
        <description>AdBook Salesforce Rep 1 Quota. Defaults to 100%</description>
        <inlineHelpText>AdBook Salesforce Rep 1 Quota. Defaults to 100%</inlineHelpText>
        <label>AB Sales Rep1 Quota</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__Sales_Rep1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Sales Rep1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>AB Sales Rep must have the &quot;Sales Rep&quot; Record Type.</errorMessage>
            <filterItems>
                <field>AB2__Rep__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales Rep</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AB2__Rep__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__Sales_Rep2_Quota__c</fullName>
        <label>AB Sales Rep2 Quota</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__Sales_Rep2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Sales Rep2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AB2__Rep__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales Rep</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AB2__Rep__c</referenceTo>
        <relationshipLabel>Opportunities (Sales Rep2)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__Sales_Rep3_Quota__c</fullName>
        <label>AB Sales Rep3 Quota</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__Sales_Rep3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Sales Rep3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AB2__Rep__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sales Rep</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AB2__Rep__c</referenceTo>
        <relationshipLabel>Opportunities (Sales Rep3)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__TrackingNumber__c</fullName>
        <label>AB Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB_Agency_Contact_Mirror__c</fullName>
        <formula>Billing_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Agency Contact Mirror</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB_Agency_Name_Mirror__c</fullName>
        <formula>Agency_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Agency Name Mirror</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB_DFP_Order_ID__c</fullName>
        <label>DFP Order ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Primary_Amendment__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Quote_ACV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Quote&apos;s Annual Contract Value and Amendment Quote&apos;s Annual Contract Value</inlineHelpText>
        <label>ACV Primary and Amendment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV_calc__c</fullName>
        <formula>IF(ISBLANK(Pre_Conversion_ACV__c)
, ((IF ( SBQQ__Renewal__c == TRUE 
, SBQQ__PrimaryQuote__r.Quote_ACV__c - Renewal_Oppy_Value__c
, IF ( TEXT(StageName) = &quot;Cancellation&quot; || TEXT(StageName) = &quot;Opt Out&quot; || TEXT(StageName) = &quot;Renegotiation&quot; 
, ACV_Primary_Amendment__c 
, ACV_Primary_Amendment__c - SBQQ__AmendedContract__r.SBQQ__Opportunity__r.ACV_Primary_Amendment__c ))))
,Pre_Conversion_ACV__c)</formula>
        <label>ACV calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Coordinator__c</fullName>
        <label>Account Coordinator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Created_By__c</fullName>
        <formula>Account.CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Credit_Status__c</fullName>
        <description>This field pulls the credit status from the account.</description>
        <formula>TEXT(Account.Credit_Status__c)</formula>
        <label>Account Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Industry_Description__c</fullName>
        <formula>text (Account.Industry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>For Dell Boomi</description>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Account.Region_Name_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy_Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_WF_Company_ID__c</fullName>
        <description>Use For Dell Boomi</description>
        <formula>Account.WF_Company_ID__c</formula>
        <label>Account WF Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Sales_Comments__c</fullName>
        <inlineHelpText>Notes from Accounting on why your opp cannot be reconciled</inlineHelpText>
        <label>Acctg Comments to Sales Director</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acctg_Reconciliation_Completed__c</fullName>
        <label>Acctg Reconciliation Completed:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No, attach contract to opp</fullName>
                </value>
                <value>
                    <fullName>No, click submit to Acctg</fullName>
                </value>
                <value>
                    <fullName>No, opp amt differs from contract</fullName>
                </value>
                <value>
                    <fullName>No, other; see Acctg Comments field</fullName>
                </value>
                <value>
                    <fullName>No, obtain SVP Approval</fullName>
                </value>
                <value>
                    <fullName>No, attach PoD to opp</fullName>
                </value>
                <value>
                    <fullName>No, attach Credit Memo Form</fullName>
                </value>
                <value>
                    <fullName>No, fill in the Contact Role section</fullName>
                </value>
                <value>
                    <fullName>No, need to create quote and send to Z-billing</fullName>
                </value>
                <value>
                    <fullName>No, need to create quote work-around and send to Z-billing</fullName>
                </value>
                <value>
                    <fullName>No, the quote needs to be sent to Z-billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Takeaways__c</fullName>
        <label>Additional Takeaways</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_of_Opportunity__c</fullName>
        <formula>Created_Date_Date_Only__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>